// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Overview Component should render a Overview component 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Overview
    keys={
        Array [
            "id",
            "type",
            "price",
          ]
    }
    listItems={
        Array [
            Object {
              "id": "1",
              "price": 88.9,
              "type": "B",
            },
            Object {
              "id": "2",
              "price": 45.2,
              "type": "C",
            },
            Object {
              "id": "1",
              "price": 56.5,
              "type": "D",
            },
          ]
    }
    title="DataTypes"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h2>
          DataTypes
</h2>,
        <Table
          dateFormat="MM/DD/YYYY"
          handleRemoveItem={[Function]}
          handleRowClick={[Function]}
          handleSort={[Function]}
          keys={
                    Array [
                              "id",
                              "type",
                              "price",
                            ]
          }
          listItems={
                    Array [
                              Object {
                                "id": "1",
                                "price": 88.9,
                                "type": "B",
                              },
                              Object {
                                "id": "2",
                                "price": 45.2,
                                "type": "C",
                              },
                              Object {
                                "id": "1",
                                "price": 56.5,
                                "type": "D",
                              },
                            ]
          }
/>,
      ],
      "className": "col-sm-9 offset-sm-3 col-md-10 offset-md-2 pt-3",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "DataTypes",
        },
        "ref": null,
        "rendered": "DataTypes",
        "type": "h2",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "dateFormat": "MM/DD/YYYY",
          "handleRemoveItem": [Function],
          "handleRowClick": [Function],
          "handleSort": [Function],
          "keys": Array [
            "id",
            "type",
            "price",
          ],
          "listItems": Array [
            Object {
              "id": "1",
              "price": 88.9,
              "type": "B",
            },
            Object {
              "id": "2",
              "price": 45.2,
              "type": "C",
            },
            Object {
              "id": "1",
              "price": 56.5,
              "type": "D",
            },
          ],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "main",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h2>
            DataTypes
</h2>,
          <Table
            dateFormat="MM/DD/YYYY"
            handleRemoveItem={[Function]}
            handleRowClick={[Function]}
            handleSort={[Function]}
            keys={
                        Array [
                                    "id",
                                    "type",
                                    "price",
                                  ]
            }
            listItems={
                        Array [
                                    Object {
                                      "id": "1",
                                      "price": 88.9,
                                      "type": "B",
                                    },
                                    Object {
                                      "id": "2",
                                      "price": 45.2,
                                      "type": "C",
                                    },
                                    Object {
                                      "id": "1",
                                      "price": 56.5,
                                      "type": "D",
                                    },
                                  ]
            }
/>,
        ],
        "className": "col-sm-9 offset-sm-3 col-md-10 offset-md-2 pt-3",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "DataTypes",
          },
          "ref": null,
          "rendered": "DataTypes",
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "dateFormat": "MM/DD/YYYY",
            "handleRemoveItem": [Function],
            "handleRowClick": [Function],
            "handleSort": [Function],
            "keys": Array [
              "id",
              "type",
              "price",
            ],
            "listItems": Array [
              Object {
                "id": "1",
                "price": 88.9,
                "type": "B",
              },
              Object {
                "id": "2",
                "price": 45.2,
                "type": "C",
              },
              Object {
                "id": "1",
                "price": 56.5,
                "type": "D",
              },
            ],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "main",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Overview Component should render a Overview component with custom date format 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Overview
    keys={
        Array [
            "id",
            "type",
            "date",
          ]
    }
    listItems={
        Array [
            Object {
              "date": 1995-05-23T00:00:00.000Z,
              "id": "1",
              "type": "B",
            },
            Object {
              "date": 1995-05-23T00:00:00.000Z,
              "id": "2",
              "type": "C",
            },
            Object {
              "date": 1995-05-23T00:00:00.000Z,
              "id": "1",
              "type": "D",
            },
          ]
    }
    title="DataTypes"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h2>
          DataTypes
</h2>,
        <Table
          dateFormat="MM/DD/YYYY"
          handleRemoveItem={[Function]}
          handleRowClick={[Function]}
          handleSort={[Function]}
          keys={
                    Array [
                              "id",
                              "type",
                              "date",
                            ]
          }
          listItems={
                    Array [
                              Object {
                                "date": 1995-05-23T00:00:00.000Z,
                                "id": "1",
                                "type": "B",
                              },
                              Object {
                                "date": 1995-05-23T00:00:00.000Z,
                                "id": "2",
                                "type": "C",
                              },
                              Object {
                                "date": 1995-05-23T00:00:00.000Z,
                                "id": "1",
                                "type": "D",
                              },
                            ]
          }
/>,
      ],
      "className": "col-sm-9 offset-sm-3 col-md-10 offset-md-2 pt-3",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "DataTypes",
        },
        "ref": null,
        "rendered": "DataTypes",
        "type": "h2",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "dateFormat": "MM/DD/YYYY",
          "handleRemoveItem": [Function],
          "handleRowClick": [Function],
          "handleSort": [Function],
          "keys": Array [
            "id",
            "type",
            "date",
          ],
          "listItems": Array [
            Object {
              "date": 1995-05-23T00:00:00.000Z,
              "id": "1",
              "type": "B",
            },
            Object {
              "date": 1995-05-23T00:00:00.000Z,
              "id": "2",
              "type": "C",
            },
            Object {
              "date": 1995-05-23T00:00:00.000Z,
              "id": "1",
              "type": "D",
            },
          ],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "main",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h2>
            DataTypes
</h2>,
          <Table
            dateFormat="MM/DD/YYYY"
            handleRemoveItem={[Function]}
            handleRowClick={[Function]}
            handleSort={[Function]}
            keys={
                        Array [
                                    "id",
                                    "type",
                                    "date",
                                  ]
            }
            listItems={
                        Array [
                                    Object {
                                      "date": 1995-05-23T00:00:00.000Z,
                                      "id": "1",
                                      "type": "B",
                                    },
                                    Object {
                                      "date": 1995-05-23T00:00:00.000Z,
                                      "id": "2",
                                      "type": "C",
                                    },
                                    Object {
                                      "date": 1995-05-23T00:00:00.000Z,
                                      "id": "1",
                                      "type": "D",
                                    },
                                  ]
            }
/>,
        ],
        "className": "col-sm-9 offset-sm-3 col-md-10 offset-md-2 pt-3",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "DataTypes",
          },
          "ref": null,
          "rendered": "DataTypes",
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "dateFormat": "MM/DD/YYYY",
            "handleRemoveItem": [Function],
            "handleRowClick": [Function],
            "handleSort": [Function],
            "keys": Array [
              "id",
              "type",
              "date",
            ],
            "listItems": Array [
              Object {
                "date": 1995-05-23T00:00:00.000Z,
                "id": "1",
                "type": "B",
              },
              Object {
                "date": 1995-05-23T00:00:00.000Z,
                "id": "2",
                "type": "C",
              },
              Object {
                "date": 1995-05-23T00:00:00.000Z,
                "id": "1",
                "type": "D",
              },
            ],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "main",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Overview Component should render a Overview component with no listItems 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Overview
    keys={
        Array [
            "id",
            "type",
            "price",
          ]
    }
    listItems={Array []}
    title="DataTypes"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h2>
          DataTypes
</h2>,
        <div
          className="jumbotron"
          role="alert"
>
          <span
                    className="empty-overview"
          >
                    No 
                    DataTypes
                     found ...
          </span>
</div>,
      ],
      "className": "col-sm-9 offset-sm-3 col-md-10 offset-md-2 pt-3",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "DataTypes",
        },
        "ref": null,
        "rendered": "DataTypes",
        "type": "h2",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <span
            className="empty-overview"
>
            No 
            DataTypes
             found ...
</span>,
          "className": "jumbotron",
          "role": "alert",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "No ",
              "DataTypes",
              " found ...",
            ],
            "className": "empty-overview",
          },
          "ref": null,
          "rendered": Array [
            "No ",
            "DataTypes",
            " found ...",
          ],
          "type": "span",
        },
        "type": "div",
      },
    ],
    "type": "main",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h2>
            DataTypes
</h2>,
          <div
            className="jumbotron"
            role="alert"
>
            <span
                        className="empty-overview"
            >
                        No 
                        DataTypes
                         found ...
            </span>
</div>,
        ],
        "className": "col-sm-9 offset-sm-3 col-md-10 offset-md-2 pt-3",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "DataTypes",
          },
          "ref": null,
          "rendered": "DataTypes",
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <span
              className="empty-overview"
>
              No 
              DataTypes
               found ...
</span>,
            "className": "jumbotron",
            "role": "alert",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "No ",
                "DataTypes",
                " found ...",
              ],
              "className": "empty-overview",
            },
            "ref": null,
            "rendered": Array [
              "No ",
              "DataTypes",
              " found ...",
            ],
            "type": "span",
          },
          "type": "div",
        },
      ],
      "type": "main",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
